--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
-    <title>[tonytong002] Example-SMART-App</title>
+    <title>tonytong002 Example-SMART-App</title>
 
     <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'>
     <!--
@@ -43,6 +43,10 @@
       </table>
       <h2>Observation Resource</h2>
       <table>
+         <tr>
+          <th>Weight:</th>
+          <td id='weight'></td>
+         </tr>
         <tr>
           <th>Height:</th>
           <td id='height'></td>
